# GeneticMidgard

./: CMakeLists.txt  Constants.cpp  Constants.h  FindSFML.cmake  README.md  genes.xml  main.cpp  start.sh
Algorithms/: Algorithms.cpp  Algorithms.h  BinaryReader.cpp  BinaryReader.h  ChromosomeMixer.cpp  ChromosomeMixer.h  GeneralFitnessCalculator.cpp  GeneralFitnessCalculator.h  chromosomeMixerProof.cpp  chromosomeMixerProof.h  lifeLaboratory.cpp  lifeLaboratory.h  printBinary.cpp  printBinary.h
Bitacora/: Bitacora-Alex.txt  Bitacora-Jairo.txt  Bitacora-Pablo.txt  Bitacora-Roberto.txt
Data/: BitVector.cpp  BitVector.h  DoubleList.cpp  DoubleList.h  FileManager.cpp  FileManager.h  Leaf.cpp  Leaf.h  PThreadParam.cpp  PThreadParam.h  PriorityQueue.h  Queue.h  Stack.h  Tree.h  TreeProof.cpp  TreeProof.h
GUI/: CMakeLists.txt  Constants.h  Map.cpp  Map.h  Objects.cpp  Objects.h  Poblacion.cpp  Poblacion.h  Slider.cpp  Slider.h  main.cpp  main.h
Generators/: EvolutionGenerator.cpp  EvolutionGenerator.h
Interface/: Random.cpp  Random.h
Models/: AgeManager.cpp  AgeManager.h  Armor.cpp  Armor.h  Chromosome.cpp  Chromosome.h  ChromosomeMixer.cpp  ChromosomeMixer.h  GeneralFitnessCalculator.cpp  GeneralFitnessCalculator.h  Genes.cpp  Genes.h  God.cpp  God.h  MovilObject.cpp  MovilObject.h  MovilObjectManager.cpp  MovilObjectManager.h  Population.cpp  Population.h  PopulationManager.cpp  PopulationManager.h  Subject.cpp  Subject.h  Terrain.cpp  Terrain.h  Weapon.cpp  Weapon.h  movilObjectManager.cpp  movilObjectManager.h
Network/: SocketConfig.h  SocketGUI.cpp  SocketGUI.h  SocketLogic.cpp  SocketLogic.h
Proof/: chromosomeMixerProof.cpp  chromosomeMixerProof.h  laboratoryProof.cpp  laboratoryProof.h  proofBinary.cpp  proofBinary.h
cmake_modules/: FindSFML.cmake
libs/: TMXParser.cpp  TMXParser.h  TSXParser.cpp
libs/pugixml/: pugixml.cpp
res/: constant.xml  genes.xml  mapa.tmx  mapatest.tmx  network.json  object.xml  populationColors.xml
